# typelib

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/typelib/: compat.h  genhash.h  hashset.h  sllist-inl.h  tl_dlist.h  tl_slist-inl.h  tl_slist.h  tl_string.h  typelib.h
src/: dlist.c  genhash.c  hashset.c  hashtable.c  list.c  nset.c  simplestring.c  string.c
test/: CMakeLists.txt  t_hashset.cc  t_list.cc  t_slist.cc  t_string.cc
