CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
# Gtest source archive to use
SET(GTEST_ARCHIVE gtest-1.7.0.zip)
# Where to download archive (if it doesn't exist)
SET(GTEST_DLSERVER http://googletest.googlecode.com/files)


PROJECT(commontypes)
INCLUDE_DIRECTORIES(include/typelib)
FILE(GLOB TLSRC src/*.c)
ADD_LIBRARY(commontypes ${TLSRC})
IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-strict-aliasing -Wextra -Wall -Wmissing-declarations")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-strict-aliasing")
ELSEIF(MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_NONSTDC_NO_DEPRECATE)
ENDIF()
IF(WIN32)
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
ENDIF()
ENABLE_TESTING()
ADD_SUBDIRECTORY(test test)
