INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)
SET(gtest_force_shared_crt ON CACHE BOOL "")
SET(BUILD_SHARED_LIBS ON)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../gtest-1.7.0 gtest-1.7.0)
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
FILE(GLOB T_SRC *.cc)
ADD_EXECUTABLE(tlibtest ${T_SRC})
TARGET_LINK_LIBRARIES(tlibtest commontypes gtest_main gtest)
ADD_TEST(tlibtest tlibtest)
